# spacetar

./: .coveragerc  .gitignore  .readthedocs.yaml  INSTALLATION.ipynb  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  README.md  USAGE.ipynb  USAGE.md  help.ipynb  noxfile.py  pyproject.toml  scopes.json  setup.py  spacetar.db  spacetar.py
.github/workflows/: interrogate.yaml  lint.yaml  tests.yaml
docs/: requirements.txt
docs/source/: USAGE.md  cli_usage.md  conf.py  contributing.md  help.ipynb  index.md  install.md  naming.md  py_usage.md  reference.md
src/spacetar/: __init__.py  chimie.py  core.py  display.py  orm.py  search.py  terminal.py
src/spacetar/data/: cli_usage.md  extragalactic.json  galactic.json  help.md  molecules.json  py_usage.md  sources.json  spacetar.db  telescopes.json
tests/: test_search_molecules.py  test_search_sources.py  test_search_telescopes.py
