[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.interrogate]
verbose = 2
color = true
quiet = false
fail-under = 95
generate-badge = "./images/"
badge-format = "svg"
whitelist-regex = []
ignore-module = true
ignore-magic = false
ignore-setters = false
ignore-private = false
ignore-init-method = true
ignore-init-module = false
ignore-semiprivate = false
ignore-nested-classes = true
ignore-nested-functions = true
ignore-property-decorators = false
ignore-regex = ["__str__", "__repr__", "__rich__"]
exclude = ["setup.py", "docs", "build", ".nox", ".vscode", ".mypy_cache"]

[tool.setuptools_scm]